--- a/.github/workflows/docker-build-opensearch.yml
+++ b/.github/workflows/docker-build-opensearch.yml
@@ -3,7 +3,7 @@
 name: "Opensearch • Docker Build"
 on:
   schedule:
-    - cron: "0 6 1 * *"
+    - cron: "0 1 * * 6"
   workflow_dispatch:
   push:
     paths:
