--- a/.github/workflows/docker-build-php-chain.yml
+++ b/.github/workflows/docker-build-php-chain.yml
@@ -3,7 +3,7 @@
 name: "PHP Chain • Docker Build"
 on:
   schedule:
-    - cron: "0 6 1 * *"
+    - cron: "0 3 * * 6"
   workflow_dispatch:
   push:
     paths:
