--- a/.github/workflows/docker-build-php-chain.yml
+++ b/.github/workflows/docker-build-php-chain.yml
@@ -248,6 +248,9 @@ jobs:
       - php-fpm-rootless-magento2-web
       - php-fpm-rootless-shopware-web
       - php-fpm-rootless-wordpress-web
+      - php-fpm-magento2-web
+      - php-fpm-shopware-web
+      - php-fpm-wordpress-web
     steps:
       - name: "PHP-FPM Rootless Blackfire • Docker Build"
         uses: the-actions-org/workflow-dispatch@v4
@@ -262,6 +265,9 @@ jobs:
       - php-fpm-rootless-magento2-web
       - php-fpm-rootless-shopware-web
       - php-fpm-rootless-wordpress-web
+      - php-fpm-magento2-web
+      - php-fpm-shopware-web
+      - php-fpm-wordpress-web
     steps:
       - name: "PHP-FPM Rootless SPX • Docker Build"
         uses: the-actions-org/workflow-dispatch@v4
@@ -276,6 +282,9 @@ jobs:
       - php-fpm-rootless-magento2-web
       - php-fpm-rootless-shopware-web
       - php-fpm-rootless-wordpress-web
+      - php-fpm-magento2-web
+      - php-fpm-shopware-web
+      - php-fpm-wordpress-web
     steps:
       - name: "PHP-FPM Rootless Xdebug 2 • Docker Build"
         uses: the-actions-org/workflow-dispatch@v4
@@ -290,6 +299,9 @@ jobs:
       - php-fpm-rootless-magento2-web
       - php-fpm-rootless-shopware-web
       - php-fpm-rootless-wordpress-web
+      - php-fpm-magento2-web
+      - php-fpm-shopware-web
+      - php-fpm-wordpress-web
     steps:
       - name: "PHP-FPM Rootless Xdebug 3 • Docker Build"
         uses: the-actions-org/workflow-dispatch@v4
@@ -301,6 +313,9 @@ jobs:
   php-fpm-blackfire:
     runs-on: ubuntu-latest
     needs:
+      - php-fpm-rootless-magento2-web
+      - php-fpm-rootless-shopware-web
+      - php-fpm-rootless-wordpress-web
       - php-fpm-magento2-web
       - php-fpm-shopware-web
       - php-fpm-wordpress-web
@@ -315,6 +330,9 @@ jobs:
   php-fpm-spx:
     runs-on: ubuntu-latest
     needs:
+      - php-fpm-rootless-magento2-web
+      - php-fpm-rootless-shopware-web
+      - php-fpm-rootless-wordpress-web
       - php-fpm-magento2-web
       - php-fpm-shopware-web
       - php-fpm-wordpress-web
@@ -329,6 +347,9 @@ jobs:
   php-fpm-xdebug2:
     runs-on: ubuntu-latest
     needs:
+      - php-fpm-rootless-magento2-web
+      - php-fpm-rootless-shopware-web
+      - php-fpm-rootless-wordpress-web
       - php-fpm-magento2-web
       - php-fpm-shopware-web
       - php-fpm-wordpress-web
@@ -343,6 +364,9 @@ jobs:
   php-fpm-xdebug3:
     runs-on: ubuntu-latest
     needs:
+      - php-fpm-rootless-magento2-web
+      - php-fpm-rootless-shopware-web
+      - php-fpm-rootless-wordpress-web
       - php-fpm-magento2-web
       - php-fpm-shopware-web
       - php-fpm-wordpress-web
